Fixed full height under address bar on ios

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -25,7 +25,8 @@ html
 
 body
 	margin: 0
-	height: 100vh
+	//height: 100vh
+	height: -webkit-fill-available
 	display: flex
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
